Re-edit the homework of 02 Nov

--- a/031102/WHUH03110208/CMakeLists.txt
+++ b/031102/WHUH03110208/CMakeLists.txt
@@ -3,4 +3,4 @@ project(WHUH03110208 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(WHUH03110208 main.c)
+add_executable(WHUH03110208 08_Mathematical_Blackhole.c)
