--- a/031102/WHUH03110210/CMakeLists.txt
+++ b/031102/WHUH03110210/CMakeLists.txt
@@ -3,4 +3,4 @@ project(WHUH03110210 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(WHUH03110210 main.c)
+add_executable(WHUH03110210 10_Contiguous_Number.c)
