rename the file

--- a/031122/WHUH03112214/CMakeLists.txt
+++ b/031122/WHUH03112214/CMakeLists.txt
@@ -3,4 +3,4 @@ project(WHUH03112214 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(WHUH03112214 main.c)
+add_executable(WHUH03112214 14_Advanced_Student_management_system.c)
